--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <meta name="description" content="Studio">
     <title>Studio</title>
 
@@ -10,21 +16,21 @@
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
+        <a class="logo-web" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
+        <nav class="navigation">
             <ul>
                 <li>
-                    <a href="">Studio</a>
+                    <a href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a href="">Portfolio</a>
+                    <a href="./portfolio.html">Portfolio</a>
                 </li>
                 <li>
                     <a href="">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -38,12 +44,12 @@
     </header>
 
     <main>
-        <section>
+        <section class="hero">
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
 
-        <section>
+        <section class="features">
             <h2>Features</h2>
             <ul>
                 <li>
@@ -92,9 +98,9 @@
             </ul>
         </section>
 
-        <section>
+        <section class="team">
             <h2>Our Team</h2>
-            <ul>
+            <ul class="team-card">
                 <li>
                     <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
@@ -119,8 +125,8 @@
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+        <a class="logo-web" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
