--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <body>
     <header>
-        <a class="logo-web" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
+
         <nav class="navigation">
+            <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
             <ul>
                 <li>
                     <a href="./index.html">Studio</a>
@@ -49,7 +50,7 @@
             <button type="button">Order Service</button>
         </section>
 
-        <section class="features">
+        <section class="features list">
             <h2>Features</h2>
             <ul>
                 <li>
