--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
 
 <body>
     <header>
-        <a class="logo-web" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
-        <nav class="navigation">
 
+        <nav class="navigation">
+            <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
             <ul>
                 <li>
                     <a href="./index.html">Studio</a>
