--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
 
         <nav class="navigation">
-            <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
-            <ul>
+            <a class="logo-web" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
+            <ul class="list">
                 <li>
                     <a href="./index.html">Studio</a>
                 </li>
@@ -31,7 +31,7 @@
                 </li>
             </ul>
         </nav>
-        <address class="contacts">
+        <address class="contacts list">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -86,7 +86,7 @@
 
         <section>
             <h2>What are we doing</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/img1.jpg" alt="desktop" width="360" height="300">
                 </li>
@@ -101,7 +101,7 @@
 
         <section class="team">
             <h2>Our Team</h2>
-            <ul class="team-card">
+            <ul class="team-card list">
                 <li>
                     <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
@@ -127,7 +127,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo-web" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
+        <a class="logo-web link" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
