--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo-web" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
+        <a class="logo-web link" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
