--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
         <nav class="navigation">
             <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./index.html">Studio</a>
                 </li>
