--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
 
         <nav class="navigation">
-            <a class="logo-web" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
+            <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
             <ul class="list">
-                <li>
+                <li class="list link">
                     <a href="./index.html">Studio</a>
                 </li>
                 <li>
@@ -31,9 +31,9 @@
                 </li>
             </ul>
         </nav>
-        <address class="contacts list">
-            <ul>
-                <li>
+        <address class="contacts">
+            <ul class="list">
+                <li class="list">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
