--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
     <footer class="footer">
         <a class="logo-web link" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
 
