list style moived to .list

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,14 +32,14 @@
             </ul>
         </nav>
         <address class="contacts">
-            <ul>
+            <u class="list">
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
-            </ul>
+                </ul>
         </address>
 
     </header>
