--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <section class="features list">
             <h2>Features</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3>Strategy</h3>
                     <p>
