--- a/portfolio.html
+++ b/portfolio.html
@@ -48,75 +48,101 @@
         <section>
 
             <h1>Apps Templates</h1>
-            <div>
-                <ul class="filter list">
-                    <li>
-                        <button type="button">All</button>
-                    </li>
-                    <li>
-                        <button type="button">Web Site</button>
-                    </li>
-                    <li>
-                        <button type="button">App</button>
-                    </li>
-                    <li>
-                        <button type="button">Design</button>
-                    </li>
-                    <li>
-                        <button type="button">Marketing</button>
-                    </li>
-                </ul>
-            </div>
+
+            <ul class="list">
+                <li>
+                    <button type="button" class="portfolio-button">All</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-button">Web Site</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-button">App</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-button">Design</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-button">Marketing</button>
+                </li>
+            </ul>
 
 
 
 
-            <div>
-                <h3>Banking App Interface Concept</h3>
-                <p>App</p>
-                <img src="./images/img_portfolio_1.jpg" alt="Banking mobile app" width="360">
-            </div>
-            <div>
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
-                <img src="./images/img_portfolio_2.jpg" alt="Cashless payment" width="360">
-            </div>
-            <div>
-                <h3>Meditation App</h3>
-                <p>App</p>
-                <img src="./images/img_portfolio_3.jpg" alt="Meditation app" width="360">
-            </div>
-            <div>
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
-                <img src="./images/img_portfolio_4.jpg" alt="Taxi service" width="360">
-            </div>
-            <div>
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
-                <img src="./images/img_portfolio_5.jpg" alt="Screen Illustrations" width="360">
-            </div>
-            <div>
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
-                <img src="./images/img_portfolio_6.jpg" alt="Online courses" width="360">
-            </div>
-            <div>
-                <h3>Instagram Stories Concept</h3>
-                <p>Design</p>
-                <img src="./images/img_portfolio_7.jpg" alt="Instagram stories" width="360">
-            </div>
-            <div>
-                <h3>Organic Food</h3>
-                <p>Web Site</p>
-                <img src="./images/img_portfolio_8.jpg" alt="Organic food" width="360">
-            </div>
-            <div>
-                <h3>Fresh Coffee</h3>
-                <p>Web Site</p>
-                <img src="./images/img_portfolio_9.jpg" alt="Fresh coffee" width="360">
-            </div>
+            <ul class="list">
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_1.jpg" alt="Banking mobile app" width="360">
+                        <h2 class="portfolio-item-name">Banking App Interface Concept</h2>
+                        <p class="portfolio-item">App</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_2.jpg" alt="Cashless payment" width="360">
+                        <h2 class="portfolio-item-name">Cashless Payment</h2>
+                        <p class="portfolio-item">Marketing</p>
 
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_3.jpg" alt="Meditation app" width="360">
+                        <h2 class="portfolio-item-name">Meditation App</h2>
+                        <p class="portfolio-item">App</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_4.jpg" alt="Taxi service" width="360">
+                        <h2 class="portfolio-item-name">Taxi Service</h2>
+                        <p class="portfolio-item">Marketing</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_5.jpg" alt="Screen Illustrations" width="360">
+                        <h2 class="portfolio-item-name">Screen Illustrations</h2>
+                        <p class="portfolio-item">Design</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_6.jpg" alt="Online courses" width="360">
+                        <h2 class="portfolio-item-name">Online Courses</h2>
+                        <p class="portfolio-item">Marketing</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_7.jpg" alt="Instagram stories" width="360">
+                        <h2 class="portfolio-item-name">Instagram Stories Concept</h2>
+                        <p class="portfolio-item">Design</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_8.jpg" alt="Organic food" width="360">
+                        <h2 class="portfolio-item-name">Organic Food</h2>
+                        <p class="portfolio-item">Web Site</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link">
+                        <img src="./images/img_portfolio_9.jpg" alt="Fresh coffee" width="360">
+                        <h2 class="portfolio-item-name">Fresh Coffee</h2>
+                        <p class="portfolio-item">Web Site</p>
+
+                    </a>
+                </li>
+            </ul>
         </section>
     </main>
 
