--- a/portfolio.html
+++ b/portfolio.html
@@ -32,14 +32,14 @@
             </ul>
         </nav>
         <address class="contacts">
-            <u class="list">
+            <ul class="list">
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
-                </ul>
+            </ul>
         </address>
 
     </header>
@@ -66,9 +66,6 @@
                     <button type="button" class="portfolio-button">Marketing</button>
                 </li>
             </ul>
-
-
-
 
             <ul class="list">
                 <li>
