--- a/portfolio.html
+++ b/portfolio.html
@@ -21,23 +21,23 @@
             <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
             <ul class="list">
                 <li>
-                    <a href="./index.html">Studio</a>
+                    <a href="./index.html" class="navigation link">Studio</>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Portfolio</a>
+                    <a href="./portfolio.html" class="navigation link">Portfolio</a>
                 </li>
                 <li>
-                    <a href="">Contacts</a>
+                    <a href="" class="navigation link">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address class="contacts">
             <ul class="list">
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="navigation-link link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="navigation-link link">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
