--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
             <ul class="list">
                 <li>
-                    <a href="./index.html" class="navigation link">Studio</>
+                    <a href="./index.html" class="navigation link">Studio</a>
                 </li>
                 <li>
                     <a href="./portfolio.html" class="navigation link">Portfolio</a>
