index sec4 changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </section>
 
         <section>
-            <h2>What are we doing</h2>
+            <h2 class="team-name">What are we doing</h2>
             <ul class="list">
                 <li>
                     <img src="./images/img1.jpg" alt="desktop" width="360" height="300">
@@ -100,27 +100,27 @@
         </section>
 
         <section class="team">
-            <h2>Our Team</h2>
-            <ul class="team-card list">
-                <li>
+            <h2 class="team-name">Our Team</h2>
+            <ul class="list">
+                <li class="team-card">
                     <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-person-name">Mark Guerrero</h3>
+                    <p class="features">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/tomford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-person-name">Tom Ford</h3>
+                    <p class="features">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/camilagarcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-person-name">Camila Garcia</h3>
+                    <p class="features">Marketing</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/danielwilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-person-name">Daniel Wilson</h3>
+                    <p class="features">UI Designer</p>
                 </li>
             </ul>
         </section>
