--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </li>
                 <li>
                     <h3 class="features-name">Technologies</h3>
-                    <p>
+                    <p class="features">
                         Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
                     </p>
