--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
 
         <nav class="navigation">
-            <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
+            <a class="logo-web link" href="./index.html">Web<span class="logo-studio-dark">Studio</span></a>
             <ul class="list">
                 <li>
                     <a href="./index.html" class="navigation link">Studio</a>
@@ -51,7 +51,7 @@
         </section>
 
         <section class="features list">
-            <h2>Features</h2>
+            <h2 class="visually-hidden">Features</h2>
             <ul class="list">
                 <li>
                     <h3 class="features-name">Strategy</h3>
@@ -127,7 +127,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo-web link" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
+        <a class="logo-web link" href="./index.html">Web<span class="logo-studio-bright">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
