--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header>
 
         <nav class="navigation">
-            <a class="logo-web link" href="./index.html">Web <span class="logo-studio-dark">Studio</span></a>
+            <a class="logo-web link" href="./index.html">Web<span class="logo-studio-dark">Studio</span></a>
             <ul class="list">
                 <li>
                     <a href="./index.html" class="navigation link">Studio</a>
@@ -47,7 +47,7 @@
     <main>
         <section>
 
-            <h1>Apps Templates</h1>
+            <h1 class="visually-hidden">Apps Templates</h1>
 
             <ul class="list">
                 <li>
@@ -144,7 +144,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo-web link" href="./index.html">Web <span class="logo-studio-bright">Studio</span></a>
+        <a class="logo-web link" href="./index.html">Web<span class="logo-studio-bright">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
